@@ -16,7 +16,6 @@ o bien que al principio se diga la longitud de lo que se envia-> util para get-s
 
 -tabla de joystick to event siempre se resetea??
 
--Tema gui Borland. Parecido en colores a ZXSpectr 
 
 -Ventana de error con tema cpc como se ven las franjas moverse?
 
